kubernetes/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-minimal-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: swagger-minimal-api
  template:
    metadata:
      labels:
        app: swagger-minimal-api
    spec:
      containers:
      - name: swagger-minimal-api
        image: acrdemopn.azurecr.io/swagger-minimal-api:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "1Gi"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: swagger-minimal-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: swagger-minimal-api
